namespace ResourceService.Domain.Resource;

public enum ResourceStatus
{
    Available,
    UnderMaintenance,
    Unavailable
}