namespace ResourceService.Domain.Resource;

public enum ResourceType
{
    Consumable,
    Room,
    Tool,
    Other
}